# Unlimited-OCR

./: README.md  infer.py  pyproject.toml
scripts/: monitor_infer.py
